--- a/package.json
+++ b/package.json
@@ -19,8 +19,17 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "expo": "^23.0.4",
     "react": "16.0.0",
-    "react-native": "0.50.3"
+    "react-native": "0.50.3",
+    "react-native-material-textfield": "^0.11.0",
+    "react-navigation": "^2.5.2",
+    "react-navigation-redux-helpers": "^2.0.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-axios-middleware": "^4.0.0",
+    "redux-localstorage": "^0.4.1",
+    "redux-thunk": "^2.2.0"
   }
 }
