--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo": "^23.0.4",
     "react": "16.0.0",
     "react-native": "0.50.3",
+    "react-native-elements": "^0.19.1",
     "react-native-material-textfield": "^0.11.0",
     "react-navigation": "^2.5.2",
     "react-navigation-redux-helpers": "^2.0.2",
