--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native": "0.50.3",
     "react-native-elements": "^0.19.1",
     "react-native-material-textfield": "^0.11.0",
+    "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.5.2",
     "react-navigation-redux-helpers": "^2.0.2",
     "react-redux": "^5.0.7",
