--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo": "^23.0.4",
     "react": "16.0.0",
     "react-native": "0.50.3",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^0.19.1",
     "react-native-material-textfield": "^0.11.0",
     "react-native-simple-radio-button": "^2.7.2",
