--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "react": "16.0.0",
     "react-native": "0.50.3",
     "react-native-datepicker": "^1.7.2",
+    "react-native-easy-toast": "^1.1.0",
     "react-native-elements": "^0.19.1",
     "react-native-material-textfield": "^0.11.0",
     "react-native-simple-radio-button": "^2.7.2",
+    "react-native-toast-native": "^1.2.1",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.5.2",
     "react-navigation-redux-helpers": "^2.0.2",
